--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       background-image: linear-gradient(rgba(255,255,255,0.85), rgba(255,255,255,0.85)), url('wllpbk.jpg');
     }
 
-    /* Floating bubble */
+    /* NAVIGATION */
     .floating-bubble {
       position: fixed; left: 24px; top: 24px; width: 64px; height: 64px;
       border-radius: 50%; overflow: hidden; border: 3px solid var(--accent);
@@ -63,7 +63,6 @@
     .floating-bubble.hidden { opacity: 0; transform: scale(0.5) translateY(-30px); pointer-events: none; }
     .floating-bubble img { width: 100%; height: 100%; object-fit: cover; }
 
-    /* Nav Menus */
     .icon-menu {
       position: fixed; left: 16px; top: 50%; transform: translateY(-50%) translateX(-120px);
       width: 80px; background: var(--glass); backdrop-filter: blur(20px);
@@ -75,8 +74,9 @@
 
     .hamburger-btn {
       width: 56px; height: 56px; border-radius: 18px; background: var(--card-bg);
-      color: var(--text); font-size: 1.5rem; display: grid; place-items: center; cursor: pointer;
+      color: var(--text); font-size: 1.5rem; display: grid; place-items: center; cursor: pointer; transition: 0.3s;
     }
+    .hamburger-btn:hover { background: var(--accent); color: white; transform: rotate(90deg); }
 
     .icon-item {
       width: 52px; height: 52px; border-radius: 16px; background: var(--card-bg);
@@ -86,100 +86,122 @@
 
     .text-menu {
       position: fixed; left: 112px; top: 50%; transform: translateY(-50%) translateX(-120%);
-      width: 320px; background: var(--glass); backdrop-filter: blur(25px);
+      width: 340px; background: var(--glass); backdrop-filter: blur(25px);
       border: 1px solid var(--border); border-radius: 28px; padding: 40px;
       z-index: 115; transition: 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
       opacity: 0; pointer-events: none;
     }
     .text-menu.open { transform: translateY(-50%) translateX(0); opacity: 1; pointer-events: auto; }
 
-    /* Home Section Grid */
-    .section-content-home {
-      display: grid;
-      grid-template-columns: 1.2fr 0.8fr;
-      align-items: center;
-      gap: 3rem;
-      background: var(--card-bg);
-      backdrop-filter: blur(15px);
-      padding: 5rem;
-      border-radius: 50px;
-      border: 1px solid var(--border);
-      max-width: 1200px;
-      width: 100%;
-      text-align: left;
+    .profile-nav { display: flex; align-items: center; gap: 15px; margin-bottom: 30px; }
+    .profile-nav img { width: 60px; height: 60px; border-radius: 50%; border: 2px solid var(--accent); }
+
+    .text-links a {
+      display: flex; align-items: center; gap: 15px; padding: 15px 20px;
+      border-radius: 12px; color: var(--text); text-decoration: none; transition: 0.3s;
+    }
+    .text-links a:hover, .text-links a.active { background: var(--accent); color: white; }
+
+    /* HERO SECTION */
+    .parallax-section {
+      min-height: 100vh; display: flex; align-items: center; justify-content: center; padding: 80px 5%;
+    }
+
+    .hero-grid {
+      display: grid; grid-template-columns: 1.2fr 0.8fr; align-items: center;
+      gap: 4rem; background: var(--card-bg); backdrop-filter: blur(15px);
+      padding: 5rem; border-radius: 50px; border: 1px solid var(--border);
+      max-width: 1250px; width: 100%;
     }
 
     .hero-text h1 {
-      font-size: clamp(2.5rem, 5vw, 4.5rem);
-      line-height: 1.1;
-      margin-bottom: 1.5rem;
-      background: linear-gradient(to right, var(--text), var(--accent));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      font-size: clamp(3rem, 6vw, 5rem); line-height: 1.1; margin-bottom: 1.5rem;
+      background: linear-gradient(45deg, var(--text) 30%, var(--accent));
+      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
     }
 
-    .hero-text p {
-      font-size: 1.2rem;
-      color: var(--text-light);
-      margin-bottom: 2rem;
-      max-width: 500px;
-    }
+    .hero-text p { font-size: 1.25rem; color: var(--text-light); margin-bottom: 2.5rem; line-height: 1.8; }
 
-    /* Pop-out Effect on Right */
-    .hero-image-container {
-      position: relative;
-      width: 100%;
-      height: 400px;
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
+    /* IMAGE POPOUT & BREATHING */
+    .hero-img-box {
+      position: relative; width: 100%; height: 450px;
+      display: flex; align-items: flex-end; justify-content: center;
     }
 
     @keyframes breathe {
-      0%, 100% { transform: scale(1); box-shadow: 0 0 0px var(--accent-glow); }
-      50% { transform: scale(1.08); box-shadow: 0 0 50px var(--accent-glow); }
+      0%, 100% { transform: scale(1); box-shadow: 0 0 20px var(--accent-glow); }
+      50% { transform: scale(1.05); box-shadow: 0 0 60px var(--accent-glow); }
+    }
+
+    @keyframes spin-slow {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
 
     .popout-circle {
-      position: absolute;
-      bottom: 20px;
-      width: 280px;
-      height: 280px;
-      border-radius: 50%;
-      background: linear-gradient(135deg, var(--accent), #60a5fa);
-      z-index: 1;
-      animation: breathe 5s ease-in-out infinite;
+      position: absolute; bottom: 30px; width: 320px; height: 320px;
+      border-radius: 50%; background: linear-gradient(135deg, var(--accent), #60a5fa);
+      z-index: 1; animation: breathe 4s ease-in-out infinite;
+      transition: 0.5s ease;
     }
 
     .popout-img {
-      position: relative;
-      width: 340px; /* Wider for popout */
-      height: auto;
-      z-index: 2;
-      filter: drop-shadow(0 20px 30px rgba(0,0,0,0.5));
-      transition: 0.4s ease;
+      position: relative; width: 380px; height: auto; z-index: 2;
+      filter: drop-shadow(0 20px 40px rgba(0,0,0,0.6));
+      transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      pointer-events: auto; cursor: pointer;
     }
 
-    /* Generic Sections */
-    .parallax-section {
-      min-height: 100vh; display: flex; align-items: center; justify-content: center; padding: 4rem 5%;
+    .hero-img-box:hover .popout-circle {
+      background: linear-gradient(225deg, var(--accent), #93c5fd);
+      filter: hue-rotate(15deg);
     }
 
-    /* Responsive */
+    .hero-img-box:hover .popout-img {
+      transform: translateY(-20px) scale(1.05);
+    }
+
+    /* EDUCATION TIMELINE */
+    .timeline { display: flex; gap: 2rem; flex-wrap: wrap; margin-top: 3rem; justify-content: center; }
+    .timeline-card {
+      background: var(--glass); padding: 2rem; border-radius: 20px;
+      border: 1px solid var(--border); flex: 1; min-width: 280px; text-align: center;
+    }
+    .timeline-card i { font-size: 2.5rem; color: var(--accent); margin-bottom: 1rem; }
+
+    /* FULL ORIGINAL FOOTER */
+    footer {
+      background: var(--glass); backdrop-filter: blur(14px); padding: 5rem 5% 3rem;
+      border-top: 1px solid var(--border); color: var(--text-light);
+    }
+    .footer-grid {
+      max-width: 1400px; margin: 0 auto; display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 3rem;
+    }
+    .footer-brand .logo {
+      width: 100px; height: 100px; margin-bottom: 1.2rem; border-radius: 50%; border: 3px solid var(--accent); overflow: hidden;
+    }
+    .footer-brand .logo img { width: 100%; height: 100%; object-fit: cover; }
+    .footer-column h3 { color: var(--text); margin-bottom: 1.5rem; font-size: 1.2rem; }
+    .footer-column ul { list-style: none; }
+    .footer-column ul li { margin-bottom: 0.8rem; }
+    .footer-column a { color: var(--text-light); text-decoration: none; transition: 0.3s; }
+    .footer-column a:hover { color: var(--accent); padding-left: 5px; }
+
+    .social-icons { display: flex; gap: 1rem; margin-top: 1.5rem; }
+    .social-icons a {
+      width: 45px; height: 45px; border-radius: 50%; background: var(--card-bg);
+      color: var(--text); display: grid; place-items: center; font-size: 1.2rem; transition: 0.3s;
+    }
+    .social-icons a:hover { background: var(--accent); color: white; transform: translateY(-5px); }
+
     @media (max-width: 1024px) {
-      .section-content-home {
-        grid-template-columns: 1fr;
-        text-align: center;
-        padding: 3rem 2rem;
-      }
-      .hero-text p { margin-left: auto; margin-right: auto; }
-      .hero-image-container { height: 350px; }
-      .popout-circle { width: 220px; height: 220px; }
-      .popout-img { width: 280px; }
+      .hero-grid { grid-template-columns: 1fr; text-align: center; padding: 3rem 2rem; }
+      .hero-img-box { height: 380px; }
+      .popout-circle { width: 250px; height: 250px; }
+      .popout-img { width: 300px; }
+      .text-menu { width: calc(100% - 40px); left: 20px; }
     }
-
-    /* Original Footer CSS remains same... */
-    footer { background: var(--glass); padding: 5rem 5% 3rem; border-top: 1px solid var(--border); text-align: center; }
   </style>
 </head>
 <body>
@@ -193,32 +215,37 @@
     <div class="icon-items">
       <div class="icon-item active" data-section="home"><i class="fa-solid fa-house"></i></div>
       <div class="icon-item" data-section="about"><i class="fa-solid fa-user"></i></div>
+      <div class="icon-item" data-section="education"><i class="fa-solid fa-graduation-cap"></i></div>
       <div class="icon-item" id="theme-toggle"><i class="fa-solid fa-moon" id="theme-icon"></i></div>
       <div class="icon-item" data-section="contact"><i class="fa-solid fa-envelope"></i></div>
     </div>
   </nav>
 
   <aside class="text-menu" id="text-menu">
+    <div class="profile-nav">
+      <img src="nobklogo.png" alt="Profile">
+      <div><strong>John Mark Kiritu</strong><br><small>IT Professional</small></div>
+    </div>
     <div class="text-links">
       <a href="#home" class="active"><i class="fa-solid fa-house"></i> Home</a>
       <a href="#about"><i class="fa-solid fa-user"></i> About</a>
       <a href="#education"><i class="fa-solid fa-graduation-cap"></i> Education</a>
+      <a href="#experience"><i class="fa-solid fa-briefcase"></i> Experience</a>
+      <a href="#services"><i class="fa-solid fa-gear"></i> Services</a>
       <a href="#contact"><i class="fa-solid fa-envelope"></i> Contact</a>
     </div>
   </aside>
 
   <section id="home" class="parallax-section">
-    <div class="section-content-home">
+    <div class="hero-grid">
       <div class="hero-text">
-        <span style="color:var(--accent); font-weight:700; letter-spacing:2px; text-transform:uppercase;">Welcome to my Portfolio</span>
+        <span style="color:var(--accent); font-weight:900; letter-spacing:3px; text-transform:uppercase; font-size:0.9rem;">Available for Projects</span>
         <h1>John Mark Kiritu</h1>
-        <p>Creative Developer & IT Professional specialized in building digital experiences with precision and modern design.</p>
-        <div class="hero-btns">
-            <a href="#contact" style="background:var(--accent); color:white; padding:15px 35px; border-radius:50px; text-decoration:none; font-weight:bold; display:inline-block; box-shadow:0 10px 20px var(--accent-glow);">Get in Touch</a>
-        </div>
+        <p>A Kampala-based IT Specialist & Creative Developer. I bridge the gap between technical infrastructure and high-end digital design.</p>
+        <a href="#contact" style="background:var(--accent); color:white; padding:18px 40px; border-radius:50px; text-decoration:none; font-weight:800; display:inline-block; box-shadow:0 10px 30px var(--accent-glow);">START A CONVERSATION</a>
       </div>
 
-      <div class="hero-image-container">
+      <div class="hero-img-box">
         <div class="popout-circle"></div>
         <img src="profilepic.png" alt="John Mark Kiritu" class="popout-img">
       </div>
@@ -227,33 +254,78 @@
 
   <section id="about" class="parallax-section">
     <div style="background:var(--card-bg); backdrop-filter:blur(10px); padding:4rem; border-radius:40px; border:1px solid var(--border); max-width:1000px; text-align:center;">
-      <h2 style="font-size:3rem; margin-bottom:1.5rem;">About Me</h2>
-      <p>I am a highly skilled IT professional with over 2 years of experience in IT support and systems administration. My passion lies in blending technical infrastructure with beautiful, functional web design.</p>
+      <h2 style="font-size:3rem; margin-bottom:1.5rem;">Professional Profile</h2>
+      <p style="font-size:1.2rem; line-height:1.8;">Self-motivated, results-driven IT professional with over 2 years of experience in IT support, networking, and Microsoft 365 administration. Expert at troubleshooting complex systems and designing user-centric web applications.</p>
+    </div>
+  </section>
+
+  <section id="education" class="parallax-section">
+    <div style="width:100%; max-width:1100px;">
+      <h2 style="text-align:center; margin-bottom:3rem;">Education Background</h2>
+      <div class="timeline">
+        <div class="timeline-card">
+          <i class="fa-solid fa-university"></i>
+          <h3>BSc. Information Technology</h3>
+          <p>Uganda Christian University</p>
+          <small style="color:var(--accent)">2018 - 2021</small>
+        </div>
+        <div class="timeline-card">
+          <i class="fa-solid fa-school"></i>
+          <h3>UACE Certificate</h3>
+          <p>St. Lawrence College</p>
+          <small style="color:var(--accent)">2016 - 2017</small>
+        </div>
+      </div>
     </div>
   </section>
 
   <footer id="contact">
-    <div style="max-width:1200px; margin:0 auto; display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:3rem;">
-      <div>
-        <img src="nobklogo.png" style="width:80px; margin-bottom:1rem;" alt="Logo">
-        <h3>John Mark Kiritu</h3>
-        <p>IT Specialist & Designer</p>
-      </div>
-      <div>
-        <h3>Quick Links</h3>
-        <p><a href="#home" style="color:var(--text-light); text-decoration:none;">Home</a></p>
-        <p><a href="#about" style="color:var(--text-light); text-decoration:none;">About</a></p>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <p>marc@wanjeru.dev</p>
-        <div style="display:flex; justify-content:center; gap:15px; margin-top:15px;">
-           <a href="#" style="color:var(--text); font-size:1.5rem;"><i class="fab fa-linkedin"></i></a>
-           <a href="#" style="color:var(--text); font-size:1.5rem;"><i class="fab fa-github"></i></a>
+    <div class="footer-grid">
+      <div class="footer-brand">
+        <div class="logo"><img src="nobklogo.png" alt="Logo"></div>
+        <h2 style="color:var(--text); margin-bottom:0.5rem;">John Mark Kiritu</h2>
+        <p>Creative Developer & Designer</p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-whatsapp"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="mailto:marc@wanjeru.dev"><i class="fa-solid fa-envelope"></i></a>
         </div>
       </div>
+
+      <div class="footer-column">
+        <h3>Information</h3>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#">Professional Blog</a></li>
+          <li><a href="#">Events</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h3>Helpful Links</h3>
+        <ul>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#">Support Center</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h3>Our Services</h3>
+        <ul>
+          <li><a href="#">Web Development</a></li>
+          <li><a href="#">IT Consultancy</a></li>
+          <li><a href="#">Cloud Migration</a></li>
+          <li><a href="#">Network Security</a></li>
+        </ul>
+      </div>
     </div>
-    <div style="margin-top:4rem; opacity:0.6;">© 2026 John Mark Kiritu — All Rights Reserved</div>
+    <div style="text-align:center; margin-top:5rem; padding-top:2rem; border-top:1px solid var(--border); opacity:0.5;">
+      © 2026 John Mark Kiritu — All Rights Reserved.
+    </div>
   </footer>
 
   <script>
@@ -264,9 +336,19 @@
     const themeToggle = document.getElementById('theme-toggle');
     const themeIcon = document.getElementById('theme-icon');
 
-    bubble.addEventListener('click', () => { bubble.classList.add('hidden'); iconMenu.classList.add('visible'); });
-    hamburger.addEventListener('click', (e) => { e.stopPropagation(); textMenu.classList.toggle('open'); });
+    // Toggle menu visibility
+    bubble.addEventListener('click', () => {
+      bubble.classList.add('hidden');
+      iconMenu.classList.add('visible');
+    });
 
+    // Hamburger slide-out
+    hamburger.addEventListener('click', (e) => {
+      e.stopPropagation();
+      textMenu.classList.toggle('open');
+    });
+
+    // Theme Toggle
     themeToggle.addEventListener('click', () => {
       const isDark = document.documentElement.getAttribute('data-theme') === 'dark';
       const newTheme = isDark ? 'light' : 'dark';
@@ -274,16 +356,34 @@
       themeIcon.className = newTheme === 'dark' ? 'fa-solid fa-moon' : 'fa-solid fa-sun';
     });
 
+    // Close logic
     document.addEventListener('click', (e) => {
       if (!iconMenu.contains(e.target) && !bubble.contains(e.target)) {
-        iconMenu.classList.remove('visible'); bubble.classList.remove('hidden'); textMenu.classList.remove('open');
+        iconMenu.classList.remove('visible');
+        bubble.classList.remove('hidden');
+        textMenu.classList.remove('open');
       }
     });
 
+    // Smooth Scroll Link Handler
     document.querySelectorAll('[data-section]').forEach(item => {
       item.addEventListener('click', () => {
         const id = item.getAttribute('data-section');
         document.getElementById(id).scrollIntoView({ behavior: 'smooth' });
+      });
+    });
+
+    // Auto-active on scroll
+    window.addEventListener('scroll', () => {
+      let current = "";
+      document.querySelectorAll('section, footer').forEach(sec => {
+        if (pageYOffset >= sec.offsetTop - 300) current = sec.getAttribute('id');
+      });
+      document.querySelectorAll('.icon-item, .text-links a').forEach(link => {
+        link.classList.remove('active');
+        if (link.getAttribute('data-section') === current || link.getAttribute('href') === `#${current}`) {
+          link.classList.add('active');
+        }
       });
     });
   </script>
